# fazendaok

./: .env  .env.example  .gitignore  BACKEND_README.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  requirements.txt
app/: __init__.py  celery_app.py  config.py  database.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  dashboard.py  diagnostics.py  photos.py  properties.py  test_dashboard.py  test_diagnostics.py  test_photos.py  test_properties.py
app/models/: __init__.py  base.py  deter.py  diagnostic.py  photo.py  prodes.py  property.py
app/schemas/: dashboard.py  diagnostic.py  photo.py  property.py
app/services/: README_photo_service.md  __init__.py  cache_service.py  claude_service.py  diagnostic_service.py  photo_service.py  report_service.py  sicar_service.py  spatial_service.py  test_diagnostic_service.py  test_photo_service.py  test_photo_upload_validation_property.py  test_report_service.py
app/tasks/: __init__.py  diagnostic_tasks.py  photo_tasks.py  test_photo_tasks.py
app/utils/: README_validators.md  __init__.py  test_validators_integration.py  test_validators_property.py  validators.py
backend/: .env.example  README.md  pyproject.toml  testar_supabase.py
backend/alembic/: README.md  script.py.mako
backend/alembic/versions/: 25a93a57259e_initial_schema.py
backend/app/: __init__.py  config.py  main.py
backend/fazendaok_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: load_deter.py  load_prodes.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/lib/: api.ts
frontend/src/pages/: Analise.tsx  Dashboard.tsx  Index.tsx  Resultado.tsx
